# project-health-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: run-health-check.md
docs/: RAG_METHODOLOGY.md  architecture.md
outputs/: history.jsonl
outputs/monthly/2026-07-09/: Portfolio_Health_Review.pptx  monthly_synthesis.json
outputs/weekly/2026-07-09/: Zycus_-_Titan_S2P_Implementation.json  Zycus_-_Titan_S2P_Implementation.md  Zycus_-_UniSan_S2P_Implementation.json  Zycus_-_UniSan_S2P_Implementation.md
scripts/: run_weekly.sh
src/project_health_agent/: __init__.py  cli.py  config.py  models.py
src/project_health_agent/analysis/: rag_engine.py  signals.py
src/project_health_agent/ingestion/: excel_loader.py
src/project_health_agent/llm/: fireworks_client.py  narrative.py
src/project_health_agent/presentation/: deck_builder.py
src/project_health_agent/reporting/: history.py  monthly_synthesis.py  weekly_report.py
src/project_health_agent/scheduler/: weekly_job.py
tests/: test_excel_loader.py  test_rag_engine.py
