[project]
name = "project-health-agent"
version = "0.1.0"
description = "AI-powered Project Health Reporting Agent for Zycus Professional Services — reads project plans, derives RAG status from real signals, explains the reasoning in plain English, and synthesizes cross-project executive presentations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zycus Professional Services" }]
license = { text = "Proprietary" }

dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "jinja2>=3.1.4",
    "python-pptx>=1.0.2",
    "apscheduler>=3.10.4",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
project-health = "project_health_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_health_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
